--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -1,6 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import opencv library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Video capture "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To quit press (q)\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "cap.set(3, 640)\n",
+    "cap.set(4, 480)\n",
+    "\n",
+    "while True:\n",
+    "    ret, img= cap.read()\n",
+    "    cv2.imshow('Webcam', img)\n",
+    "\n",
+    "    if cv2.waitKey(1) == ord('q'):\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What objects we will detect:\n",
+    "Glasses\n",
+    "Paper\n",
+    "Plastic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,8 +71,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "SRS_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
