more code improvement

--- a/yolo-train-colab.ipynb
+++ b/yolo-train-colab.ipynb
@@ -13,27 +13,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "YGD-NTQXoIXO"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "import random\n",
-        "import shutil\n",
-        "import torch\n",
-        "from torchvision import transforms\n",
-        "import cv2\n",
-        "import numpy as np"
+        "!pip install ultralytics"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "RgzMzuMzoSjB"
-      },
+      "metadata": {},
       "source": [
-        "Add custom dataset to yaml format for yolo"
+        "Download dataset used for training"
       ]
     },
     {
@@ -113,19 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {
-        "id": "L628m-RKpQ52"
-      },
-      "outputs": [],
-      "source": [
-        "import shutil\n",
-        "shutil.rmtree('runs')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -298,7 +276,6 @@
         }
       ],
       "source": [
-        "!pip install ultralytics\n",
         "from ultralytics import YOLO\n",
         "\n",
         "# Load a COCO-pretrained YOLO11n model\n",
@@ -310,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1294,7 +1271,7 @@
       ],
       "source": [
         "# Train the model\n",
-        "results = model.train(data=\"datasets/data.yaml\", epochs=50, imgsz=640)"
+        "results = model.train(data=\"garbage-classification-3/data.yaml\", epochs=50, imgsz=640)"
       ]
     },
     {
@@ -1340,6 +1317,13 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Upload results to drive"
       ]
     },
     {
