--- a/yolo-train-colab.ipynb
+++ b/yolo-train-colab.ipynb
@@ -1276,6 +1276,23 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "validation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Validate the model\n",
+        "metrics = model.val() "
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "e8JbrSPKn-f8"
       },
